# tree-sitter-mcp

./: .gitignore  AGENTS.md  CLI.md  LICENSE  README.md  pyproject.toml
skills/tree-sitter-analyzer/: SKILL.md
src/tree_sitter_analyzer/: __init__.py  cli.py
src/tree_sitter_mcp/: __init__.py  analyzer.py  languages.py  project.py  server.py
