[project]
name = "tree-sitter-mcp"
version = "0.1.0"
description = "A tree-sitter based MCP server for code analysis and security auditing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "X1r0z", email = "i@exp10it.io" }]
keywords = ["tree-sitter", "mcp", "code-analysis", "security", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "fastmcp>=2.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[project.scripts]
tree-sitter-mcp = "tree_sitter_mcp.server:main"
tree-sitter-analyzer = "tree_sitter_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tree_sitter_mcp", "src/tree_sitter_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
